--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,9 @@
     <div class="column">
       <h2 class="column-title">ToDo</h2>
       <div class="cards">
-        <div class="cards-item" draggable="true">Welcome to Trello!</div>
+        <div class="cards-item" data-id="1" draggable="true">Welcome to Trello!
+          <button class="remove-btn"></button>
+        </div>
       </div>
       <div class="form">
         <textarea class="textarea" rows="3" placeholder="Enter a title for this card..."></textarea>
